# redesigned-octo-tribble

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  sample.json
static/: swagger.json
